vendor/sqlx-0.5.2/tests/ui/postgres/gated/uuid.stderr
error: optional feature `uuid` required for type UUID of column #1 ("uuid")
 --> $DIR/uuid.rs:2:13
  |
2 |     let _ = sqlx::query!("select 'a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11'::uuid");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: optional feature `uuid` required for type UUID of param #1
 --> $DIR/uuid.rs:3:13
  |
3 |     let _ = sqlx::query!("select $1::uuid", ());
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
